<resources>
    <string name="app_name">Bookstore Inventory</string>
    <string name="title_activity_detailed">DetailedActivity</string>
    <string name="action_settings">Settings</string>

    <!--Strings for different product types-->
    <string name="type_other">Other or Unknown</string>
    <string name="type_hardcover">Hardcover</string>
    <string name="type_paperback">Paperback</string>
    <string name="type_ebook">eBook</string>
    <string name="type_audio">Audiobook</string>

    <!--Warnings and notices-->
    <string name="discard_changes">Discard your changes and quit editing?</string>
    <string name="error">Error Saving Product</string>
    <string name="success">Product saved</string>
    <string name="empty_inventory">Inventory currently empty. Please add an item by tapping the floating button.</string>
    <string name="delete_dialog_msg">Delete this product from inventory?</string>
    <string name="delete_success">Product deleted</string>
    <string name="delete_error">Error deleting product</string>
    <string name="no_product_found">No Product Found</string>
    <string name="neg_quantity">Cannot have negative quantity in stock</string>
    <string name="unknown_supplier">Unknown Supplier</string>
    <string name="number_not_found">Number not found</string>
    <string name="empty_entry">Cannot save empty entry</string>
    <string name="pos_amount">Must sell positive amount</string>
    <string name="larger_than_qty">Sold amount cannot be larger than quantity in stock</string>

    <!--Buttons-->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="button_discard">Discard</string>
    <string name="button_keep_editing">Keep Editing</string>
    <string name="order">Order from Supplier</string>
    <string name="confirm">Confirm</string>

    <!--Headers, Categories, and things that need naming-->
    <string name="title_add">Add a Product</string>
    <string name="title_edit">Edit Product</string>
    <string name="product_info">Product Information</string>
    <string name="overview">Overview</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="type">Product Type</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="quantity_abv">Qty:</string>
    <string name="required">* Required</string>
    <string name="amount_sold">Amount Sold</string>

</resources>
