<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/required"
            style="@style/CategoryStyle"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:text="@string/required"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/overview_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/required">

            <TextView
                android:id="@+id/overview_label"
                style="@style/CategoryStyle"
                android:layout_weight="1"
                android:text="@string/overview" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/name_input"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/product_name"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/price_input"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"
                    app:layout_constraintTop_toBottomOf="@id/name_input" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/type_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/overview_category">

            <TextView
                android:id="@+id/type_label"
                style="@style/CategoryStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/type" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantity_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/type_category">

            <TextView
                style="@style/CategoryStyle"
                android:layout_weight="1"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <Button
                    android:id="@+id/minusQuantity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:text="-" />

                <EditText
                    android:id="@+id/quantity_input"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:hint="0"
                    android:inputType="number" />

                <Button
                    android:id="@+id/addQuantity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:text="+" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/supplier_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/quantity_category">

            <TextView
                style="@style/CategoryStyle"
                android:layout_weight="1"
                android:text="@string/supplier" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/supplier_input"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/name"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/supplier_num_input"
                    style="@style/EditorFieldStyle"
                    android:digits="0123456789+"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    app:layout_constraintTop_toBottomOf="@id/supplier_input" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>